# sandbox_app

./: .gitignore  .pre-commit-config.yaml  Dockerfile  Pipfile  docker-compose.yml  package.json
.devcontainer/: devcontainer.json
api/: example.py
api/migrations/: 0001_initial.py
backend/: pyproject.toml  run_production.sh
backend/api/: urls.py
backend/jobs/: example.py  urls.py
backend/server/: urls.py
frontend/: webpack.config.ts
frontend/src/: App.tsx  CreateThing.tsx  ExampleDisplay.tsx  api.ts
frontend/src/config/: defineConfig.ts  index.ts
frontend/src/config/envs/: local.ts  prod.ts  staging.ts
jobs/migrations/: 0001_initial.py  0002_delete_exampleredisjobmodel.py
scripts/: attach_environment.sh  create_environment.sh  generate_github_key.sh  postgres.init.sql
server/: settings.py
src/: Thing.tsx  api.ts
