[tool.poetry]
name = "sandbox"
version = "0.1.0"
description = "General Purpose Sandbox Application"
authors = ["Matt Finnell <mattfinnell104@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django = "^4.2.5"
djangorestframework = "^3.14.0"
django-rq = "^2.8.1"
python-dotenv = "^1.0.0"
psycopg = "^3.1.12"
hypercorn = "^0.14.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
